# C--Test

./: CMakeLists.txt  DevOps.drawio  MainWindow.h
